--- a/css/myprofile.css
+++ b/css/myprofile.css
@@ -38,3 +38,21 @@ table.user-edit tr {
 table.user-edit a:hover {
     color: #17a4e5;
 }
+
+div.favorite-product-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+div.favorite-product {
+    width: calc(25% - 24px);
+    padding: 0px 12px 4px 12px;
+    transition: 0.15s;
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.12);
+}
+
+div.favorite-product:hover {
+    box-shadow: 0px 0px 18px 0px var(--main-blue-color);
+}
