--- a/css/header.css
+++ b/css/header.css
@@ -212,6 +212,13 @@ div.greeting-message {
     padding-left: 16px;
 }
 
+.title-bottom-padding {
+    padding-bottom: 16px;
+}
+.line-height {
+    line-height: 1.5;
+}
+
 /* Back to top button */
 .back-to-top {
     position: fixed;
