--- a/css/filteredproducts.css
+++ b/css/filteredproducts.css
@@ -83,6 +83,8 @@ hr {
     flex-basis: 0;
     flex-grow: 3;
     text-align: left;
+    max-height: 360px;
+    overflow-y: scroll;
 }
 
 .filtered-product-info h2 {
