--- a/css/contactus.css
+++ b/css/contactus.css
@@ -32,7 +32,7 @@ table.contactus-table th {
 .email-addresses {
     padding-top: 36px;
 }
-div.contactus-section-wrapper {
+.contactus-section-wrapper {
     display: flex;
     width: 75%;
     margin: 0 auto;
