--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@ footer li {
 
 footer ul li a {
     text-decoration-line: none;
-    padding: 0px;
+    padding: 0;
     color: grey;
     transition: 0.15s;
 }
@@ -45,7 +45,7 @@ ul.payingmethods {
 
 ul.payingmethods li {
     float: left;
-    padding: 0px;
+    padding: 0;
     margin-right: 24px;
     margin-bottom: 16px;
     cursor: pointer;
@@ -72,7 +72,7 @@ ul.payingmethods li:hover img {
 
 ul.socialIcons li {
     float: left;
-    padding: 0px;
+    padding: 0;
     margin-right: 12px;
     margin-bottom: 16px;
     cursor: pointer;
@@ -124,7 +124,7 @@ div.newsletter input[type=submit] {
         width: 90%;
     }
     div.footer-section-wrapper h2 {
-        letter-spacing: 0px;
+        letter-spacing: 0;
         padding-bottom: 12px;
     }
     div.footer-section-wrapper li {
