--- a/css/signup.css
+++ b/css/signup.css
@@ -1,13 +1,9 @@
-.error-paragraph {}
-
-.signup-paragraph {}
-
 .section-signup {
     padding-top: 36px;
     text-align: center;
 }
 
-div.signup-image {
+.signup-image {
     margin-top: 36px;
 }
 
