--- a/css/highlightedproducts.css
+++ b/css/highlightedproducts.css
@@ -4,7 +4,7 @@ div.products-wrapper {
     gap: 2%;
     width: 75%;
     margin: 0 auto;
-    padding: 36px 0px;
+    padding: 36px 0;
 }
 
 div.product-highlight {
@@ -12,12 +12,12 @@ div.product-highlight {
     flex: 1;
     text-align: left;
     transition: 0.15s;
-    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 div.product-highlight:hover {
     transition: 0.15s;
-    box-shadow: 0px 0px 18px 0px var(--main-blue-color);
+    box-shadow: 0 0 18px 0 var(--main-blue-color);
 }
 
 div.product-highlight-image {
@@ -128,7 +128,7 @@ div.star-reviews {
         flex-wrap: wrap;
     }
     div.products-title {
-        padding: 0px;
+        padding: 0;
     }
     div.products-title h1 {
         font-size: var(--h1-tablet);
