--- a/css/catalog.css
+++ b/css/catalog.css
@@ -17,6 +17,8 @@
 }
 
 .product-category {
+    display: flex;
+    align-items: center;
     flex-basis: 22%;
     margin-bottom: 2%;
     padding: 12px;
