--- a/css/controlpanel.css
+++ b/css/controlpanel.css
@@ -381,6 +381,15 @@ label {
     width: 0;
 }
 
+img.action-buttons {
+    cursor: pointer;
+}
+
+img.action-buttons:hover {
+    animation: shake 0.5s ease-in-out;
+    animation-iteration-count: 1;
+}
+
 /* Users management */
 .radio-buttons-container {
     margin-top: 16px;
