--- a/css/product.css
+++ b/css/product.css
@@ -135,3 +135,53 @@ button {
     font-weight: 700;
     outline: 3px solid var(--main-blue-color);
 }
+
+.ratingsSortSelect {
+    width: 200px;
+    padding: 12px;
+    margin-bottom: 12px;
+    font-size: 14px;
+    background-image: url("../images/DropdownIcon.png");
+    background-position: 94%;
+    background-size: 14px;
+    background-repeat: no-repeat;
+    appearance: none;
+    color: grey;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-height: 90%;
+    height: 90%;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+#mainImage {
+    cursor: pointer;
+    opacity: 100%;
+    transition: 0.3s;
+}
+#mainImage:hover {
+    opacity: 90%;
+}
