--- a/css/highlightedproducts.css
+++ b/css/highlightedproducts.css
@@ -119,12 +119,18 @@ div.star-reviews {
     div.product-highlight h3.salesCount {
         font-size: var(--p-mobile);
     }
+    div.product-highlight {
+        flex-basis: 50%;
+    }
+    div.products-wrapper {
+        width: 96%;
+    }
 }
 
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1199px) {
     div.products-wrapper {
-        width: 90%;
+        width: 96%;
         flex-wrap: wrap;
     }
     div.products-title {
