--- a/css/signin.css
+++ b/css/signin.css
@@ -36,3 +36,13 @@ div.signin-section {
     height: 18px;
     margin-right: 6px;
 }
+
+/* Mobile phones */
+@media screen and (max-width: 767px) {
+
+}
+
+/* Tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+
+}
